...
                                        <rect key="frame" x="0.0" y="190.66666666666666" width="414" height="95.333333333333343"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                        <state key="normal" title="Without Image"/>
                                        <connections>
                                            <action selector="showBannerViewWithoutImageTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="HRI-rM-P77"/>
...
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Verification Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PaF-mG-SKa">
                                        <rect key="frame" x="0.0" y="0.0" width="414" height="55.666666666666664"/>
                                        <accessibility key="accessibilityConfiguration" identifier="verification-label-modal"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                        <nil key="textColor"/>
...
                                        <rect key="frame" x="0.0" y="55.666666666666671" width="414" height="55.666666666666671"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="11"/>
                                        <state key="normal" title="Regular"/>
                                        <connections>
                                            <action selector="showRegular:" destination="ttC-lg-4V1" eventType="touchUpInside" id="XB1-eN-Dxj"/>
...
                                        <rect key="frame" x="0.0" y="166.66666666666666" width="414" height="55.666666666666657"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="11"/>
                                        <state key="normal" title="Without Action Button"/>
                                        <connections>
                                            <action selector="showWithoutButton:" destination="ttC-lg-4V1" eventType="touchUpInside" id="8t6-t5-tFf"/>
...
                                        <rect key="frame" x="0.0" y="333.66666666666669" width="414" height="55.333333333333314"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="11"/>
                                        <state key="normal" title="With Large Title and Body"/>
                                        <connections>
                                            <action selector="showWithLargeTitleAndBody:" destination="ttC-lg-4V1" eventType="touchUpInside" id="GpZ-Ch-lJf"/>
...
                                        <rect key="frame" x="0.0" y="389" width="414" height="55.666666666666686"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="11"/>
                                        <state key="normal" title="Large Title Text"/>
                                        <connections>
                                            <action selector="showWithLargeTitle:" destination="ttC-lg-4V1" eventType="touchUpInside" id="38U-Wq-hKm"/>
...
                                        <rect key="frame" x="0.0" y="444.66666666666669" width="414" height="55.666666666666686"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="11"/>
                                        <state key="normal" title="With Large Title and Body Without Image"/>
                                        <connections>
                                            <action selector="showWithLargeTitleAndBodyWithoutImage:" destination="ttC-lg-4V1" eventType="touchUpInside" id="rEV-RD-evh"/>
...
                                        <rect key="frame" x="0.0" y="500.33333333333343" width="414" height="55.666666666666686"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="11"/>
                                        <state key="normal" title="With Large Title, No Image, No Body and No Button"/>
                                        <connections>
                                            <action selector="showWithLargeTitleWithoutBodyWithoutImageWithoutButton:" destination="ttC-lg-4V1" eventType="touchUpInside" id="vqK-6n-Jb1"/>
...
                                        <rect key="frame" x="0.0" y="556" width="414" height="55.333333333333371"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                        <state key="normal" title="Wide Image"/>
                                        <connections>
                                            <action selector="showWithWideImage:" destination="ttC-lg-4V1" eventType="touchUpInside" id="tOI-8R-sTB"/>
...
                                        <rect key="frame" x="0.0" y="611.33333333333337" width="414" height="55.666666666666629"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                        <state key="normal" title="Thin Image"/>
                                        <connections>
                                            <action selector="showWithThinImage:" destination="ttC-lg-4V1" eventType="touchUpInside" id="whs-EW-I4T"/>
...
                        </constraints>
                    </view>
                    <tabBarItem key="tabBarItem" title="Modal Messages" id="bHQ-TR-Bdx"/>
                    <connections>
                        <outlet property="verifyLabel" destination="PaF-mG-SKa" id="7LE-kU-qxT"/>
...
