...
                                    <bool key="isElement" value="YES"/>
                                </accessibility>
                            </imageView>
                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vYW-0X-e5S">
                                <rect key="frame" x="313" y="42" width="40" height="40"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <accessibility key="accessibilityConfiguration" identifier="close-button" label="Close button"/>
                                <state key="normal" backgroundImage="close-with-transparency.png"/>
                                <connections>
                                    <action selector="closeButtonClicked:" destination="lGH-bl-7Xw" eventType="touchUpInside" id="lpP-J3-1Jc"/>
                                    <action selector="closeButtonClicked:" destination="x01-lq-3r6" eventType="touchUpInside" id="wxI-c1-DJ3"/>
                                </connections>
                            </button>
...
                                        <fontDescription key="fontDescription" style="UICTFontTextStyleTitle2"/>
                                        <nil key="textColor"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="700" translatesAutoresizingMaskIntoConstraints="NO" id="c7x-Lf-M58">
                                        <rect key="frame" x="24" y="82.000000000000043" width="306" height="230.66666666666663"/>
                                        <accessibility key="accessibilityConfiguration" identifier="modal-image-view" label="In-app message image">
                                            <bool key="isElement" value="YES"/>
                                        </accessibility>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="144" identifier="actual height at runtime" id="EeQ-n5-WE7" userLabel="actual height at runtime"/>
                                            <constraint firstAttribute="width" constant="270" identifier="Image Width In Landscape Mode" id="lJJ-PY-Yai"/>
                                            <constraint firstAttribute="height" priority="900" constant="230.66999999999999" placeholder="YES" identifier="image height to make interface builder happy" id="pm4-tp-Fjt" userLabel="image height to make interface builder happy"/>
...
                                                <include reference="lJJ-PY-Yai"/>
                                            </mask>
                                        </variation>
                                    </imageView>
                                    <button opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="252" verticalCompressionResistancePriority="1000" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VmW-ue-K1q">
                                        <rect key="frame" x="114" y="460.66666666666674" width="126" height="36"/>
                                        <accessibility key="accessibilityConfiguration" identifier="message-action-button"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="36" identifier="Max Action Button Height" id="6T1-on-oWM"/>
                                        </constraints>
                                        <inset key="contentEdgeInsets" minX="16" minY="9" maxX="16" maxY="9"/>
                                        <state key="normal" title="Action Button"/>
                                        <connections>
                                            <action selector="actionButtonTapped:" destination="x01-lq-3r6" eventType="touchUpInside" id="EBt-cx-fnZ"/>
                                        </connections>
                                    </button>
                                    <textView clipsSubviews="YES" clearsContextBeforeDrawing="NO" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" text="Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor " textAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="24j-6H-N9j">
                                        <rect key="frame" x="24" y="336.66666666666674" width="306" height="100"/>
                                        <accessibility key="accessibilityConfiguration" identifier="message-body-textview"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="100" identifier="Body Text View Height Constraint" id="h2w-ub-tEc"/>
                                        </constraints>
                                        <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
                                        <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                    </textView>
                                </subviews>
                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                <accessibility key="accessibilityConfiguration" identifier="message-card-view">
                                    <bool key="isElement" value="NO"/>
                                </accessibility>
                                <constraints>
                                    <constraint firstItem="c7x-Lf-M58" firstAttribute="top" relation="greaterThanOrEqual" secondItem="jER-Re-ODh" secondAttribute="top" constant="24" identifier="Image View.top ≥ top + 24" id="0Fp-k2-48a"/>
                                    <constraint firstItem="24j-6H-N9j" firstAttribute="trailing" secondItem="Edi-DJ-cR8" secondAttribute="trailing" identifier="Body Text View.trailing = Title Label.trailing" id="0aC-BE-yfJ"/>
                                    <constraint firstItem="Edi-DJ-cR8" firstAttribute="leading" secondItem="c7x-Lf-M58" secondAttribute="trailing" constant="24" identifier="Title Label.leading = Image View.trailing + 24" id="7vK-9V-j5H"/>
...
